--- a/style.css
+++ b/style.css
@@ -1,13 +1,28 @@
 /* Global */
+* {box-sizing:border-box;}
+
+html, body {
+  height: 100%;
+}
+
 body {
   font-family: 'Ubuntu', sans-serif;
   margin: 0;
+  background-color: #e2e3dd;
 }
 
 header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 1.5rem;
+  font-family: 'Lobster', cursive;
+  border-bottom: 1px solid black;
+  background-color: #f5c419;
+}
+
+main {
+  /* min-height: 100%; */
 }
 
 table {
@@ -17,38 +32,81 @@ table {
 }
 
 td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
+  border: 1px solid black;
+  border-top: none;
   padding: 8px;
 }
 
+td {
+  text-align: left;
+  padding: 1%;
+}
+
 th {
+  background-color: #bbc5c7;
   cursor: pointer;
+  text-align: center;
+  padding: 2%;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: #f7f6f4;
+}
+
+input {
+  border-radius: 3px;
+  border: 1px solid black;
 }
 
 /* Main */
 .container {
   display: flex;
   justify-content: space-between;
-  padding: 0 5%;
+  border-radius: 10px;
 }
 
-/* New Movie */
-.new-movie-block {
+/* Menus */
+.menu-block {
   width: 25%;
   display: flex;
   flex-direction: column;
   align-items: left;
-  border: 1px solid black;
+  background-color: #f0f0f0;
+  padding: 1% 2%;
 }
 
-.new-movie-form {
+/* Search Box */
+.search-box {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+}
+
+.search-box input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  width: 100%;
+}
+
+/* New Movie */
+/* https://blog.logrocket.com/how-to-style-forms-with-css-a-beginners-guide/ */
+.new-movie-form input {
+  padding: 3px;
+  margin: 5px 0;
+}
+
+.new-movie-form button {
+  margin-top: 15px;
+
+  /* usual styles */
+  padding:10px;
+  border:none;
+  background-color:#f5c419;
+  font-weight:600;
+  border-radius:5px;
+  width:100%;
+  font-size: 1rem;
+  cursor: pointer;
 }
 
 .new-movie-form-group {
@@ -60,13 +118,7 @@ tr:nth-child(even) {
 
 /* Movie List */
 .movie-list-block {
-  border: 1px solid black;
   width: 75%;
+  margin-right: 1%;
+  height: 100%;
 }
-
-.search-box {
-  border: 1px solid black;
-  display: flex;
-  align-items: center;
-}
-
